# Hackathon-2-phases

./: .gitignore  AGENTS.md  BONUS_FEATURES.md  CLAUDE.md  CRUD_TEST_RESULTS.md  ENV_SETUP.md  PROJECT_STRUCTURE.md  README.md  tmpclaude-789b-cwd
.claude/: settings.local.json
backend/: .gitignore  CLAUDE.md  README.md  agent.py  db.py  fix_conversations_schema.py  main.py  mcp_server.py  models.py  pyproject.toml  requirements.txt  schema.sql  test_mcp_tools.py  test_mcp_tools_direct.py  test_mcp_with_openrouter.py  test_openrouter_connection.py  test_token_limits.py  tmpclaude-6bdc-cwd
frontend/: .env.production  .gitignore  CLAUDE.md  jest.config.js  jest.setup.ts  package-lock.json  package.json  tailwind.config.ts  tmpclaude-eeef-cwd
phase-1-console-app/: README.md  pyproject.toml
phase-1-console-app/docs/: plan.md  spec.md  tasks.md
phase-1-console-app/src/: main.py  models.py  repository.py  services.py
phase-1-console-app/src/todo_console_app/: __init__.py
phase-1-console-app/tests/: __init__.py
phase-2-web-app/: .gitignore  CLAUDE.md  README.md  TEST_RESULTS.md  spec.md
phase-2-web-app/backend/: CLAUDE.md  pyproject.toml  requirements.txt  schema.sql  setup_database.py  verify_database.py
phase-2-web-app/backend/middleware/: __init__.py
phase-2-web-app/backend/schemas/: task.py
phase-2-web-app/backend/services/: task_service.py
phase-2-web-app/backend/tests/: conftest.py  test_task_service.py
phase-3-ai-chatbot/: DOMAIN_ALLOWLIST.md  OPENROUTER_TESTING.md  README.md  TESTING.md  plan.md  tasks.md
phase-4-kubernetes/: README.md  (+2 more)
(+235 files in other folders)
