[project]
name = "todo-console-app"
version = "0.1.0"
description = "Simple in-memory todo application with command-line interface"
readme = "README.md"
authors = [
    { name = "creativesar", email = "uniqueluck68@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
